--- a/css/style.css
+++ b/css/style.css
@@ -5,35 +5,34 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-html {
-
+nav {
+    width: 100%;
+    text-align: center;
 }
 
-body {
-
+.nav-bar li {
+    list-style: none;
+    display: inline-block;
+    padding: 1rem 2rem;
 }
 
 .page-wrap {
-    background-color: red;
     display: flex;
-}
-
-.column-left {
-
-}
-
-.column-center {
-
-}
-
-.column-right {
-
+    gap: 2rem;
 }
 
 header {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 blockquote {
     font-style: italic;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    width: fit-content;
+    text-align: center;
 }
