--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,6 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-nav {
-    width: 100%;
-    text-align: center;
-}
-
-.nav-bar li {
-    list-style: none;
-    display: inline-block;
-    padding: 1rem 2rem;
-}
-
-.page-wrap {
-    display: flex;
-    gap: 2rem;
-}
-
 header {
     text-align: center;
     display: flex;
@@ -35,4 +19,21 @@ blockquote {
     border-bottom: 1px solid black;
     width: fit-content;
     text-align: center;
+}
+/* ^^^ header and above ^^^ */
+
+.page-wrap {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding-top: 2rem;
+}
+
+.column {
+    text-align: center;
+}
+
+img {
+    width: 300px;
+    height: 700px;
 }
