--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Courier New', Courier, monospace;
+    color: whitesmoke;
 }
 
 header {
@@ -15,8 +16,8 @@ header {
 
 blockquote {
     font-style: italic;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    border-top: 1px solid whitesmoke;
+    border-bottom: 1px solid whitesmoke;
     width: fit-content;
     text-align: center;
 }
@@ -26,14 +27,24 @@ blockquote {
     display: flex;
     justify-content: center;
     gap: 2rem;
-    padding-top: 2rem;
 }
 
 .column {
     text-align: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 img {
     width: 300px;
     height: 700px;
+}
+
+body {
+    background-image: url(../img/restaurant_background.jpg);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    background-size: cover;
+    background-color: burlywood;
 }
